<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/maskot" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
       android:gravity="center"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppins_semi_bold" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/desc_ob5"
        android:textSize="15sp"
        android:textColor="@color/primary"
        android:gravity="center"
        android:fontFamily="@font/poppins_regular" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_in"
        android:layout_gravity="center"
        android:backgroundTint="@color/primary"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        app:cornerRadius="20dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semi_bold"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:backgroundTint="@color/primary"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        app:cornerRadius="20dp"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semi_bold"/>
</LinearLayout>
