<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activitySigninAccount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.login.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/Iv_back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/arrow_left"
            android:src="@drawable/ic_back" />

        <!-- Title Text -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <!-- Subtitle Text -->
        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/welcome_back_message"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

        <!-- Email Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emaillogin"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Password Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/password"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/passwordInputLogin"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#9F9696"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

            <ImageView
                android:id="@+id/passwordToggleLogin"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_visibility_off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/passwordInputLogin"
                app:layout_constraintBottom_toBottomOf="@id/passwordInputLogin"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Forgot Password Link -->
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/primary"
            tools:ignore="TextContrastCheck" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/poppins_semi_bold"
            android:padding="12dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

        <!-- Existing Account Section -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/existingAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_message"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular" />

            <TextView
                android:id="@+id/signupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/sign_up"
                android:textColor="@color/primary"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
