<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- ViewPager -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/onboarding_screens"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nextButton"
        android:layout_marginBottom="16dp"/>

    <!-- Next Button -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:text="@string/next"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:backgroundTint="@color/primary"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/skipButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"/>

    <!-- Skip Button -->
    <Button
        android:id="@+id/skipButton"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:text="@string/skip"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:backgroundTint="@color/onPrimary"
        android:textColor="@color/primary"
        app:cornerRadius="20dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
