<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/favoriteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:text="@string/title_profile"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

    <!-- PROFILE CARD -->
    <LinearLayout
        android:id="@+id/profileCard"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="13dp"
        android:paddingEnd="18dp"
        android:paddingVertical="10dp"
        android:background="@drawable/bg_profile_solid">

        <!-- AVATAR -->
        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/profile"
            android:background="@drawable/rounded_image"
            android:scaleType="centerCrop"/>

        <!-- USER INFO -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserName"
                android:text="@string/jhon_doe"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView
                android:id="@+id/tvUserEmail"
                android:text="@string/email"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <!-- MENU LIST -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <!-- MENU ITEM -->
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/profile_selector"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:text="Edit Informasi"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/arrow_right"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- LOGOUT BUTTON -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/logout"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/red"
        app:cornerRadius="20dp"/>
</LinearLayout>
